Fix MVC
Controladores
Botones
Funciones
Validadores